--- a/brain-games.cabal
+++ b/brain-games.cabal
@@ -25,7 +25,9 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Games.Calc
+      Games.Even
+      Types
   other-modules:
       Paths_brain_games
   autogen-modules:
@@ -35,6 +37,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , random
   default-language: Haskell2010
 
 executable brain-games-exe
@@ -49,6 +52,7 @@ executable brain-games-exe
   build-depends:
       base >=4.7 && <5
     , brain-games
+    , random
   default-language: Haskell2010
 
 test-suite brain-games-test
@@ -64,4 +68,5 @@ test-suite brain-games-test
   build-depends:
       base >=4.7 && <5
     , brain-games
+    , random
   default-language: Haskell2010
