--- a/brain-games.cabal
+++ b/brain-games.cabal
@@ -31,6 +31,7 @@ library
       Games.Prime
       Games.Progression
       Types
+      Utils
   other-modules:
       Paths_brain_games
   autogen-modules:
